k8s-configs/ping-cloud/base/pingcloud-metadata/base/ingress.yaml
# This defines the ingress for the metadata service

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metadata-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
  - hosts:
    - metadata.ping-demo.com
  rules:
  - host: metadata.ping-demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: metadata
          servicePort: 5000
